# nodes-requirements

./: .gitignore  README.md
backend/: .cursorrules  Cargo.toml  README.md  api-docs.yaml
backend/insomnia/: README.md  api_collection.json  insomnia_collection.json
backend/migrations/: 20240318000000_create_nodes_table.sql  20240319000000_create_price_history_table.sql  20240320000000_create_api_keys_table.down.sql  20240320000000_create_api_keys_table.sql  20240321000000_add_rate_limiting.down.sql  20240321000000_add_rate_limiting.sql
backend/scripts/: seed.sql  setup.sh
backend/src/: error.rs  lib.rs  main.rs  test_utils.rs
backend/src/db/: api_keys.rs  mod.rs  nodes.rs  price_history.rs
backend/src/error/: mod.rs
backend/src/middleware/: api_key.rs  mod.rs
backend/src/models/: api_key.rs  mod.rs  node.rs  price_history.rs
backend/src/price_fetcher/: mod.rs
backend/src/routes/: api_keys.rs  mod.rs  nodes.rs  nodes_test.rs  price_history.rs
backend/src/services/: mod.rs  price_fetcher.rs  scheduler.rs
backend/tests/: mod.rs
backend/tests/common/: mod.rs
backend/tests/db/: api_keys.rs  mod.rs  nodes.rs  price_history.rs
backend/tests/middleware/: api_key.rs  mod.rs
backend/tests/routes/: api_keys.rs  mod.rs  nodes.rs  price_history.rs
backend/tests/services/: mod.rs  price_fetcher.rs  scheduler.rs
frontend/: .cursorrules  package-lock.json  package.json
scripts/: setup.sh
sprints/: README.md  SPRINT_PLAN.md  TASK_TEMPLATE.md
sprints/sprint1/: goals.md  summary.md  tasks.md
sprints/sprint2/: goals.md  tasks.md
(+17 files in other folders)
