[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "chrono",
] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
log = "0.4"
derive_more = "0.99"

[dev-dependencies]
tokio-test = "0.4"
actix-rt = "2.10"
actix-test = "0.1"
