[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "chrono",
] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
log = "0.4"
derive_more = "0.99"
validator = { version = "0.16", features = ["derive"] }
thiserror = "1.0"
actix-http = "3.0"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
actix-rt = "2.10"
actix-test = "0.1"
serde_json = "1.0"
mockito = "1.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
